Fixed layout not collapsing to one column

--- a/layouts/meguro_1/components.styl
+++ b/layouts/meguro_1/components.styl
@@ -27,5 +27,6 @@ $breakpoint = (400 + 250 + 90 - 1)px
 @media screen and (max-width $breakpoint)
 	.column_1_container
 	.column_2_container
+		flex-basis 100%
 		overflow visible
 		height auto
