--- a/layouts/meguro_2/components.styl
+++ b/layouts/meguro_2/components.styl
@@ -34,6 +34,7 @@ $breakpoint = 800px - 1px
 @media screen and (max-width $breakpoint)
 	.column_1_container
 	.column_2_container
+		flex-basis 100%
 		overflow visible
 		height auto
 
