--- a/layouts/meguro_4/components.styl
+++ b/layouts/meguro_4/components.styl
@@ -32,6 +32,7 @@ $breakpoint = (450 + 450 + 90 - 1)px
 @media screen and (max-width $breakpoint)
 	.column_1_container
 	.column_2_container
+		flex-basis 100%
 		overflow visible
 		height auto
 
