--- a/layouts/meguro_home/components.styl
+++ b/layouts/meguro_home/components.styl
@@ -31,5 +31,6 @@ $breakpoint = (350 + 350 - 1)px
 @media screen and (max-width $breakpoint)
 	.column_1_container
 	.column_2_container
+		flex-basis 100%
 		overflow visible
 		height auto
